--- a/resume.css
+++ b/resume.css
@@ -11,11 +11,92 @@
 */
 
 body {
-    font-family: "Roboto", sans-serif;
-    color: #767f8b;
-    background: #f5f5f5;
-    font-size: 14px;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+    font-family: "Georgia", sans-serif;
+    color: #444;
+    max-width: 960px;
+    padding: 10px 50px;
+    margin: 80px auto;
+    
   }
 
+  #main { 
+    
+    padding: 10px 50px;
+    background: #f5f5f5;
+    max-width: 960px;
+    position: relative;
+    border: #444 solid;
+    border-width: 8px 0 2px 0;
+    padding-right: 250px;
+   
+  }
+
+  #inner-wrapper {
+    background: #3e9cb9;
+    position: absolute;
+    right: 0;
+    width: 240px;
+    height: 100%;
+    min-height: 800px;
+    color: #fff;
+    position: absolute;
+    margin-top: -10px;
+   
+  }
+  .side-wrapper a {
+    color: #ffffff;
+  }
+
+
+
+  
+  .side-wrapper .name {
+    font-size: 32px;
+    font-weight: 900;
+    margin-top: 25px;
+    margin-bottom: 10px;
+  }
+  .side-wrapper .tagline {
+    color: rgb(255, 255, 255);
+    font-size: 16px;
+    font-weight: 400;
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+  .side-wrapper .profile-div {
+    margin-bottom: 15px;
+  }
+  .side-wrapper .contact-list {
+    margin-right: 5px;
+    font-size: 16px;
+    vertical-align: middle;
+    color: #fffffff8;
+  }
+  .side-wrapper .contact-list li {
+    margin-bottom: 15px;
+  }
+  .side-wrapper .contact-list li:last-child {
+    margin-bottom: 0;
+  }
+  
+
+
+   
+
+    
+
+
+
+
+
+
+
+  
+
+
+  .skillstable tr { 
+      
+    line-height: 25px; 
+    
+  
+  }
