--- a/resume.css
+++ b/resume.css
@@ -1,14 +1,3 @@
-/*
----------------------------------------------------------------------------------
-	STRIPPED DOWN RESUME TEMPLATE
-    html resume
-
-    v0.9: 5/28/09
-
-    design and code by: thingsthatarebrown.com 
-                        (matt brown)
----------------------------------------------------------------------------------
-*/
 
 body {
     font-family: "Georgia", sans-serif;
@@ -51,13 +40,13 @@ body {
 
   
   .side-wrapper .name {
-    font-size: 32px;
+    font-size: 23px;
     font-weight: 900;
-    margin-top: 25px;
+    margin-top: 30px;
     margin-bottom: 10px;
   }
   .side-wrapper .tagline {
-    color: rgb(255, 255, 255);
+    color: rgba(255, 255, 255, 0.750);
     font-size: 16px;
     font-weight: 400;
     margin-top: 0;
@@ -75,24 +64,64 @@ body {
   .side-wrapper .contact-list li {
     margin-bottom: 15px;
   }
-  .side-wrapper .contact-list li:last-child {
-    margin-bottom: 0;
+  
+  .contact-div .email {
+    display: list-item;
+    list-style-type: "📧";
+    
   }
+
+  .contact-div .phone {
+    display: list-item;
+    list-style-type: "📱";
+    
+  }
+
+  .contact-div .linkedin {
+    display: list-item;
+    list-style-type: "🔗";
+    
+  }
+
+  .contact-div .github {
+    display: list-item;
+    list-style-type: "👨‍💻";
+    
+  }
+
   
 
+ .side-wrapper .degree h2 {
 
-   
+    font-size: 16px;
+
+ }
+
+
+  .education {
+    margin-top: 80px;
+  } 
+
+  .certifications {
+    margin-top: 80px;
+  } 
+
+  .degree p{
 
     
-
-
-
-
-
-
-
+    color: rgba(255, 255, 255, 0.750);
+    font-size: 16px;
+    font-weight: 400;
+    margin-left: 10px;
   
+    
 
+}
+
+  .degree strong{
+    font-weight: 400;
+    color: #fffffff8;
+  }
 
   .skillstable tr { 
       
