--- a/frontend/resume.css
+++ b/frontend/resume.css
@@ -129,3 +129,11 @@ body {
     
   
   }
+
+
+#counter {
+   padding: 0.5em 0 0.5em 0;
+   border-top: 0.5px solid #8b8989;
+   text-align: center;
+   
+  }
