--- a/frontend/resume.css
+++ b/frontend/resume.css
@@ -131,6 +131,23 @@ body {
   }
 
 
+
+  .github-link a{
+    
+    color: #3e9cb9;
+    text-decoration: none;
+    font-weight: 400;
+    
+}
+
+.github-link:hover a{
+    
+  color: #42869b;
+  text-decoration: underline;
+  
+}
+
+
 #counter {
    padding: 1em 0 1em 0;
    border-top: 0.5px solid #8b8989;
